kubernetes/webuploader.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webuploader-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: <you-dns-name>.<your-region>.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webuploader
            port:
              number: 80
